added joe and leeds and pen

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
       <video id="louVideo" preload playsinline src="/images/lou.mp4" loop type="video/mp4"></video>
       <video id="dickieVideo" preload playsinline src="/images/dickie.mp4" type="video/mp4"></video>
       <video id="rosieVideo" preload playsinline src="/images/rosie.mp4" type="video/mp4"></video>
-      <video id="maeveVideo" preload playsinline src="/images/maeve.mp4" type="video/mp4"></video>
+      <video id="leedsVideo" preload playsinline src="/images/leeds.mp4" type="video/mp4"></video>
       <video id="emilyVideo" preload playsinline src="/images/emily.mp4" type="video/mp4"></video>
       <video id="markVideo" preload playsinline src="/images/mark.mp4" type="video/mp4"></video>
       <video id="nickVideo" preload playsinline src="/images/nick.mp4" type="video/mp4"></video>
@@ -68,10 +68,10 @@
       <video id="ksideVideo" preload playsinline src="/images/kside.mp4" type="video/mp4"></video>
       <video id="kellyVideo" preload playsinline src="/images/kelly.mp4" type="video/mp4"></video>
       <video id="maxVideo" preload playsinline src="/images/max.mp4" type="video/mp4"></video>
-      <video id="melVideo" preload playsinline src="/images/mel.mp4" type="video/mp4"></video>
       <video id="pollyVideo" preload playsinline src="/images/polly.mp4" type="video/mp4"></video>
       <video id="randcVideo" preload playsinline src="/images/randc.mp4" type="video/mp4"></video>
       <video id="stephVideo" preload playsinline src="/images/steph.mp4" type="video/mp4"></video>
+      <video id="penVideo" preload playsinline src="/images/pen.mp4" type="video/mp4"></video>
     </a-assets>
 
     <a-camera id="loadingCamera" active="true" look-controls="enabled: false" spectator="true" rotation="-10 0 0"  position="-20 80 120">
@@ -86,25 +86,25 @@
     </a-entity>
 
     <a-entity id="videosContainer" animation="property: rotation; to: 360 360 360; loop: true; dur: 25000; easing: linear;">
-      <a-video id="jack" src="#jackVideo" width="9" height="16" position="-15 0 -20" look-at="#camera"></a-video>
-      <a-video id="lou" src="#louVideo" width="9" height="16" position="5 0 -20" look-at="#camera"></a-video>
-      <a-video id="dickie" src="#dickieVideo" width="9" height="16" position="-25 17 -5" look-at="#camera"></a-video>
+      <a-video id="jack" src="#jackVideo" width="13" height="23" position="-15 0 -21" look-at="#camera"></a-video>
+      <a-video id="lou" src="#louVideo" width="13" height="23" position="5 0 -23" look-at="#camera"></a-video>
+      <a-video id="dickie" src="#dickieVideo" width="9" height="16" position="-25 15 -5" look-at="#camera"></a-video>
       <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="15 -15 25" look-at="#camera"></a-video>
-      <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="30 2 15" look-at="#camera"></a-video>
+      <a-video id="leeds" src="#leedsVideo" width="9" height="16" position="30 1 15" look-at="#camera"></a-video>
       <a-video id="emily" src="#emilyVideo" width="9" height="16" position="5 -7 30" look-at="#camera"></a-video>
       <a-video id="mark" src="#markVideo" width="9" height="9" position="28 0 4" look-at="#camera"></a-video>
-      <a-video id="nick" src="#nickVideo" width="16" height="9" position="5 15 30" look-at="#camera"></a-video>
+      <a-video id="nick" src="#nickVideo" width="16" height="9" position="5 14 22" look-at="#camera"></a-video>
       <a-video id="amy" src="#amyVideo" width="9" height="14" position="-25 15 10" look-at="#camera"></a-video>
-      <a-video id="josh" src="#joshVideo" width="12" height="8" position="20 14 -10" look-at="#camera"></a-video>
+      <a-video id="josh" src="#joshVideo" width="12" height="8" position="20 13 -10" look-at="#camera"></a-video>
       <a-video id="liam" src="#liamVideo" width="12" height="8" position="-8 5 22" look-at="#camera"></a-video>
       <a-video id="loz" src="#lozVideo" width="9" height="16" position="-25 -2 20" look-at="#camera"></a-video>
-      <a-video id="tomb" src="#tombVideo" width="9" height="16" position="-30 0 0" look-at="#camera"></a-video>
-      <a-video id="adam" src="#adamVideo" width="9" height="16" position="-8 20 22" look-at="#camera"></a-video>
+      <a-video id="tomb" src="#tombVideo" width="9" height="16" position="-30 0 10" look-at="#camera"></a-video>
+      <a-video id="adam" src="#adamVideo" width="9" height="16" position="-9 20 22" look-at="#camera"></a-video>
       <a-video id="tomd" src="#tomdVideo" width="12" height="8" position="21 -13 -14" look-at="#camera"></a-video>
       <a-video id="matt" src="#mattVideo" width="9" height="16" position="30 15 2" look-at="#camera"></a-video>
-      <a-video id="cat" src="#catVideo" width="9" height="9" position="5 6 35" look-at="#camera"></a-video>
+      <a-video id="cat" src="#catVideo" width="9" height="9" position="5 7 35" look-at="#camera"></a-video>
       <a-video id="izzie" src="#izzieVideo" width="9" height="16" position="26 0 -15" look-at="#camera"></a-video>
-      <a-video id="katy" src="#katyVideo" width="9" height="16" position="30 20 15" look-at="#camera"></a-video>
+      <a-video id="katy" src="#katyVideo" width="9" height="16" position="29 20 14" look-at="#camera"></a-video>
       <a-video id="lucy" src="#lucyVideo" width="16" height="9" position="15 0 20" look-at="#camera"></a-video>
       <a-video id="tommy" src="#tommyVideo" width="9" height="16" position="-5 -8 30" look-at="#camera"></a-video>
       <a-video id="katie" src="#katieVideo" width="9" height="9" position="20 10 20" look-at="#camera"></a-video>
@@ -112,9 +112,9 @@
       <a-video id="emma" src="#emmaVideo" width="9" height="16" position="-22 15 22" look-at="#camera"></a-video>
       <a-video id="george" src="#georgeVideo" width="16" height="9" position="25 -14 0" look-at="#camera"></a-video>
       <a-video id="kelly" src="#kellyVideo" width="9" height="16" position="30 -2 -6" look-at="#camera"></a-video>
-      <a-video id="kside" src="#ksideVideo" width="9" height="16" position="-30 0 10" look-at="#camera"></a-video>
+      <a-video id="kside" src="#ksideVideo" width="9" height="16" position="-30 -2 0" look-at="#camera"></a-video>
       <a-video id="max" src="#maxVideo" width="9" height="16" position="-20 -20 15" look-at="#camera"></a-video>
-      <a-video id="mel" src="#melVideo" width="9" height="16" position="20 28 25" look-at="#camera"></a-video>
+      <a-video id="pen" src="#penVideo" width="9" height="16" position="20 25 20" look-at="#camera"></a-video>
       <a-video id="polly" src="#pollyVideo" width="9" height="16" position="-17 -8 27" look-at="#camera"></a-video>
       <a-video id="randc" src="#randcVideo" width="16" height="9" position="-5 -18 20" look-at="#camera"></a-video>
       <a-video id="steph" src="#stephVideo" width="9" height="16" position="25 -15 15" look-at="#camera"></a-video>
